{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "9addd964-56ce-4c50-bdf8-4d77529892a3",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "d0ee6195-344d-4434-8885-6502ec78dd6a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "efbaeef7-1296-45fc-b53b-78c4b6cf9ac4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "43817aed-4dc3-48cc-9215-1ef782f15fb1",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b8582e0-9064-463c-b41d-22392980b3f7",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}